# TestBot

./: .gitignore
src/testbot_bringup/: package.xml  setup.cfg  setup.py
src/testbot_bringup/launch/: bringup.launch.py
src/testbot_control/: package.xml  setup.cfg  setup.py
src/testbot_control/config/: control_params.yaml  joy_params.yaml
src/testbot_control/launch/: control.launch.py  joystick_teleop.launch.py  keyboard_teleop.launch.py
src/testbot_control/testbot_control/: differential_drive_controller.py  odometry_publisher.py
src/testbot_description/: CMakeLists.txt  package.xml
src/testbot_description/launch/: diplay.launch.py  display.launch.py  view_robot.launch.py
src/testbot_description/rviz/: display.rviz  view_robot.rviz
src/testbot_description/urdf/: physical_properties.xacro  testbot.urdf.xacro
src/testbot_driver/: package.xml  setup.cfg  setup.py
src/testbot_driver/config/: hardware_params.yaml
src/testbot_driver/firmware/motor_encoder_test/: motor_encoder_test.ino
src/testbot_driver/firmware/testbot_firmware/: testbot_firmware.ino
src/testbot_driver/launch/: driver.launch.py  hardware_interface.launch.py  hardware_test.launch.py
src/testbot_driver/testbot_driver/: hardware_interface.py  serial_protocol.py
src/testbot_msgs/: CMakeLists.txt  package.xml
src/testbot_msgs/msg/: EncoderStamped.msg  MotorCommand.msg  MotorFeedback.msg  MotorStatus.msg
src/testbot_sensors/: package.xml  setup.cfg  setup.py
src/testbot_sensors/config/: laser_filter_params.yaml  lidar_params.yaml  lidar_test.rviz  rplidar_params.yaml
src/testbot_sensors/launch/: lidar_test.launch.py  sensor.launch.py  view_lidar.launch.py
src/testbot_sensors/rviz/: lidar_view.rviz
src/testbot_sensors/testbot_sensors/: lidar_monitor.py  lidar_processor.py  lidar_test.py  lidar_visualizer.py
src/testbot_slam/: package.xml  setup.cfg  setup.py
src/testbot_slam/config/: slam_toolbox_params.yaml
src/testbot_slam/launch/: slam.launch.py  view_slam.launch.py
